--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,6 @@
 		<module>practice04</module>
 		<module>practice05</module>
 		<module>chapter04</module>
+		<module>network</module>
 	</modules>
 </project>
