--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,6 @@
 		<module>practice05</module>
 		<module>chapter04</module>
 		<module>network</module>
+		<module>chapter03</module>
 	</modules>
 </project>
